tests/baselines/reference/parseErrorInHeritageClause1.errors.txt
parseErrorInHeritageClause1.ts(1,17): error TS2304: Cannot find name 'A'.
parseErrorInHeritageClause1.ts(1,19): error TS1127: Invalid character.


==== parseErrorInHeritageClause1.ts (2 errors) ====
    class C extends A ¬ {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      ~
!!! error TS1127: Invalid character.
    }